0.14/_sources/tutorials/index.rst.txt
:orphan:

README Tutos
============

Check the tutorials on torchrl documentation: https://pytorch.org/rl


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_getting-started-4_thumb.png
    :alt:

  :doc:`/tutorials/getting-started-4`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get started with logging</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_getting-started-0_thumb.png
    :alt:

  :doc:`/tutorials/getting-started-0`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get started with Environments, TED and transforms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_getting-started-2_thumb.png
    :alt:

  :doc:`/tutorials/getting-started-2`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Getting started with model optimization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: TorchRL contributors">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_rlrender_thumb.png
    :alt:

  :doc:`/tutorials/rlrender`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Render policy rollouts with rlrender</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_getting-started-3_thumb.png
    :alt:

  :doc:`/tutorials/getting-started-3`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get started with data collection and storage</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Using pretrained models">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_pretrained_models_thumb.png
    :alt:

  :doc:`/tutorials/pretrained_models`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Using pretrained models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_evaluator_thumb.png
    :alt:

  :doc:`/tutorials/evaluator`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Using the Evaluator</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_getting-started-5_thumb.png
    :alt:

  :doc:`/tutorials/getting-started-5`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get started with your own first training loop</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_getting-started-1_thumb.png
    :alt:

  :doc:`/tutorials/getting-started-1`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get started with TorchRL's modules</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_collector_trajectory_assembly_thumb.png
    :alt:

  :doc:`/tutorials/collector_trajectory_assembly`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Collectors Deep Dive: Trajectory Assembly</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Task-specific policy in multi-task environments">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_multi_task_thumb.png
    :alt:

  :doc:`/tutorials/multi_task`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Task-specific policy in multi-task environments</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_vla_thumb.png
    :alt:

  :doc:`/tutorials/vla`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Vision-Language-Action (VLA) policies with TorchRL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="What you will learn">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_checkpointing_thumb.png
    :alt:

  :doc:`/tutorials/checkpointing`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Unified checkpointing in TorchRL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: TorchRL contributors">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_trl_interop_thumb.png
    :alt:

  :doc:`/tutorials/trl_interop`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">TRL Interoperability: Using TorchRL Buffers and HF Reward Models Together</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: TorchRL contributors">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_microduck_thumb.gif
    :alt:

  :doc:`/tutorials/microduck`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MicroDuck: tasks as data, rewards as a registry, one policy for all of them</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_dqn_with_rnn_thumb.png
    :alt:

  :doc:`/tutorials/dqn_with_rnn`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Recurrent DQN: Training recurrent policies</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_memory_efficient_rl_thumb.png
    :alt:

  :doc:`/tutorials/memory_efficient_rl`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Memory-Efficient RL Training</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Achintya Paningapalli">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_recurrent_sequence_training_thumb.png
    :alt:

  :doc:`/tutorials/recurrent_sequence_training`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Recurrent training on sequence batches</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Get started with reinforcement learning in PyTorch.">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_torchrl_demo_thumb.png
    :alt:

  :doc:`/tutorials/torchrl_demo`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Introduction to TorchRL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_export_thumb.png
    :alt:

  :doc:`/tutorials/export`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exporting TorchRL modules</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial demonstrates how to use PyTorch and :pytorchrl to solve a Multi-Agent Reinforcement Learning (MARL) problem.">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_multiagent_ppo_thumb.png
    :alt:

  :doc:`/tutorials/multiagent_ppo`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-Agent Reinforcement Learning (PPO) with TorchRL Tutorial</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial demonstrates how to use PyTorch and :pytorchrl to train a parametric policy network to solve the Inverted Pendulum task from the OpenAI-Gym/Farama-Gymnasium control library.">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_coding_ppo_thumb.png
    :alt:

  :doc:`/tutorials/coding_ppo`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Reinforcement Learning (PPO) with TorchRL Tutorial</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_torchrl_envs_thumb.png
    :alt:

  :doc:`/tutorials/torchrl_envs`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">TorchRL envs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial demonstrates how to use TorchRL&#x27;s LLM wrappers for integrating Large Language Models into reinforcement learning workflows. TorchRL provides two main wrappers:">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_llm_wrappers_thumb.png
    :alt:

  :doc:`/tutorials/llm_wrappers`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">LLM Wrappers in TorchRL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_rb_tutorial_thumb.png
    :alt:

  :doc:`/tutorials/rb_tutorial`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Using Replay Buffers</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="TorchRL trainer: A DQN example">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_coding_dqn_thumb.png
    :alt:

  :doc:`/tutorials/coding_dqn`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">TorchRL trainer: A DQN example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Author: Vincent Moens">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_pendulum_thumb.png
    :alt:

  :doc:`/tutorials/pendulum`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pendulum: Writing your environment and transforms with TorchRL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The first step in controlling a complex robot is rarely an end-to-end RL policy. Closed-loop controllers, scripted motion primitives, and imitation data are often used first to make the task reliable enough for later reward-driven fine tuning. This tutorial uses a MuJoCo Menagerie UR5e arm with a Robotiq 2F-85 gripper and shows how to ask the robot to do human-readable things such as &quot;reach this pose&quot;, &quot;close the gripper&quot;, or &quot;go home&quot; while TorchRL handles the low-level action plumbing.">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_mujoco_cube_bowl_macros_thumb.gif
    :alt:

  :doc:`/tutorials/mujoco_cube_bowl_macros`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MuJoCo scripted manipulation with human-readable robot actions</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial demonstrates how to use PyTorch and TorchRL to solve a Competitive Multi-Agent Reinforcement Learning (MARL) problem.">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_multiagent_competitive_ddpg_thumb.png
    :alt:

  :doc:`/tutorials/multiagent_competitive_ddpg`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Competitive Multi-Agent Reinforcement Learning (DDPG) with TorchRL Tutorial</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="TorchRL objectives: Coding a DDPG loss">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_coding_ddpg_thumb.png
    :alt:

  :doc:`/tutorials/coding_ddpg`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">TorchRL objectives: Coding a DDPG loss</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/getting-started-4
   /tutorials/getting-started-0
   /tutorials/getting-started-2
   /tutorials/rlrender
   /tutorials/getting-started-3
   /tutorials/pretrained_models
   /tutorials/evaluator
   /tutorials/getting-started-5
   /tutorials/getting-started-1
   /tutorials/collector_trajectory_assembly
   /tutorials/multi_task
   /tutorials/vla
   /tutorials/checkpointing
   /tutorials/trl_interop
   /tutorials/microduck
   /tutorials/dqn_with_rnn
   /tutorials/memory_efficient_rl
   /tutorials/recurrent_sequence_training
   /tutorials/torchrl_demo
   /tutorials/export
   /tutorials/multiagent_ppo
   /tutorials/coding_ppo
   /tutorials/torchrl_envs
   /tutorials/llm_wrappers
   /tutorials/rb_tutorial
   /tutorials/coding_dqn
   /tutorials/pendulum
   /tutorials/mujoco_cube_bowl_macros
   /tutorials/multiagent_competitive_ddpg
   /tutorials/coding_ddpg


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: tutorials_python.zip </tutorials/tutorials_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: tutorials_jupyter.zip </tutorials/tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
